# api/oas_router_gen.go
@@ -317,26 +317,64 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 							}
 
 							elem = origElem
-						case 'c': // Prefix: "cancel"
+						case 'c': // Prefix: "ca"
 							origElem := elem
-							if l := len("cancel"); len(elem) >= l && elem[0:l] == "cancel" {
+							if l := len("ca"); len(elem) >= l && elem[0:l] == "ca" {
 								elem = elem[l:]
 							} else {
 								break
 							}
 
 							if len(elem) == 0 {
-								// Leaf node.
-								switch r.Method {
-								case "PUT":
-									s.handlePaymentsIDCancelPutRequest([1]string{
-										args[0],
-									}, elemIsEscaped, w, r)
-								default:
-									s.notAllowed(w, r, "PUT")
+								break
+							}
+							switch elem[0] {
+							case 'n': // Prefix: "ncel"
+								origElem := elem
+								if l := len("ncel"); len(elem) >= l && elem[0:l] == "ncel" {
+									elem = elem[l:]
+								} else {
+									break
 								}
 
-								return
+								if len(elem) == 0 {
+									// Leaf node.
+									switch r.Method {
+									case "PUT":
+										s.handlePaymentsIDCancelPutRequest([1]string{
+											args[0],
+										}, elemIsEscaped, w, r)
+									default:
+										s.notAllowed(w, r, "PUT")
+									}
+
+									return
+								}
+
+								elem = origElem
+							case 'p': // Prefix: "pture"
+								origElem := elem
+								if l := len("pture"); len(elem) >= l && elem[0:l] == "pture" {
+									elem = elem[l:]
+								} else {
+									break
+								}
+
+								if len(elem) == 0 {
+									// Leaf node.
+									switch r.Method {
+									case "PUT":
+										s.handlePaymentsIDCapturePutRequest([1]string{
+											args[0],
+										}, elemIsEscaped, w, r)
+									default:
+										s.notAllowed(w, r, "PUT")
+									}
+
+									return
+								}
+
+								elem = origElem
 							}
 
 							elem = origElem
@@ -738,28 +776,68 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 							}
 
 							elem = origElem
-						case 'c': // Prefix: "cancel"
+						case 'c': // Prefix: "ca"
 							origElem := elem
-							if l := len("cancel"); len(elem) >= l && elem[0:l] == "cancel" {
+							if l := len("ca"); len(elem) >= l && elem[0:l] == "ca" {
 								elem = elem[l:]
 							} else {
 								break
 							}
 
 							if len(elem) == 0 {
-								// Leaf node.
-								switch method {
-								case "PUT":
-									r.name = "PaymentsIDCancelPut"
-									r.summary = ""
-									r.operationID = ""
-									r.pathPattern = "/payments/{id}/cancel"
-									r.args = args
-									r.count = 1
-									return r, true
-								default:
-									return
+								break
+							}
+							switch elem[0] {
+							case 'n': // Prefix: "ncel"
+								origElem := elem
+								if l := len("ncel"); len(elem) >= l && elem[0:l] == "ncel" {
+									elem = elem[l:]
+								} else {
+									break
 								}
+
+								if len(elem) == 0 {
+									// Leaf node.
+									switch method {
+									case "PUT":
+										r.name = "PaymentsIDCancelPut"
+										r.summary = ""
+										r.operationID = ""
+										r.pathPattern = "/payments/{id}/cancel"
+										r.args = args
+										r.count = 1
+										return r, true
+									default:
+										return
+									}
+								}
+
+								elem = origElem
+							case 'p': // Prefix: "pture"
+								origElem := elem
+								if l := len("pture"); len(elem) >= l && elem[0:l] == "pture" {
+									elem = elem[l:]
+								} else {
+									break
+								}
+
+								if len(elem) == 0 {
+									// Leaf node.
+									switch method {
+									case "PUT":
+										r.name = "PaymentsIDCapturePut"
+										r.summary = ""
+										r.operationID = ""
+										r.pathPattern = "/payments/{id}/capture"
+										r.args = args
+										r.count = 1
+										return r, true
+									default:
+										return
+									}
+								}
+
+								elem = origElem
 							}
 
 							elem = origElem
